EOD Mon 11/19. Worked on all sections in Profiles.

--- a/staRt/www/states/root/profiles/card-templates/progress/card-progress.html
+++ b/staRt/www/states/root/profiles/card-templates/progress/card-progress.html
@@ -1,12 +1,12 @@
 <div class="card-content">
 
 	<div class="card-body">
-		<h3>PROGRESS</h3>
-		<p>Charts and tables of user progress can go here.</p>
+		<h3>UNDER DEVELOPMENT</h3>
+		<p>Interactive chart and/or table of user progress will be displayed here.</p>
 	</div>
 
 	<div class="card-foot">
-	 USER INPUT BTNS GO HERE
+	 <!-- USER INPUT BTNS GO HERE -->
 	</div> <!-- card-foot -->
 	
 </div>
