--- a/staRt/www/states/root/profiles/card-templates/settings/card-settings.html
+++ b/staRt/www/states/root/profiles/card-templates/settings/card-settings.html
@@ -1,12 +1,10 @@
 <div class="card-content">
 
 	<div class="card-body">
-		<h3>SETTINGS</h3>
-		<p>This is where the 'adjust the LPC filter order' page should go, especially since this value is part of a particpant's profile.</p>
+		<h3>Coming soon...</h3>
 	</div> <!-- end .card-body -->
 
 	<div class="card-foot">
-	 USER INPUT BTNS GO HERE
 	</div> <!-- card-foot -->
 
 </div>
