--- a/staRt/www/states/root/profiles/drawer-template/profiles-drawer.html
+++ b/staRt/www/states/root/profiles/drawer-template/profiles-drawer.html
@@ -44,7 +44,7 @@
 								{{profile.name}}
 							</div>
 							<div class="testerIcon"
-							ng-if="!profile.formalTester">
+							ng-if="profile.formalTester">
 							</div>
 						</div>
 				</ion-radio>
