--- a/staRt/www/states/root/resources/resources_template.html
+++ b/staRt/www/states/root/resources/resources_template.html
@@ -29,7 +29,7 @@
 
 		<div class="resources-layout_content-container">
 
-			<!-- Resourses Main Page -->
+			<!-- //////// Resourses Main Page //////// -->
 			<div ng-if="!data.configuring" class="res-page-index">
 
 				<div class="res-sect">
@@ -73,7 +73,7 @@
 			</div> <!-- end res-index-page -->
 
 
-			<!-- Adjust Filter Order Page -->
+			<!-- //////// Adjust Filter Order Page //////// -->
 			<div class="resources text-and-lpc__text" ng-if="data.configuring">
 
 				<div class="back-btn" ng-click="data.configuring = false">Back</div>
