--- a/staRt/www/states/root/profiles/card-templates/slp/card-slp.html
+++ b/staRt/www/states/root/profiles/card-templates/slp/card-slp.html
@@ -1,10 +1,10 @@
 <div class="card-content">
 
-	<div class="card-body slpCard">
+	<div class="card-body card-body-slp">
 		<h3>Clinician Options</h3>
 
 		<button class="button profiles-list-btn"
-			ng-click="deleteAllProfiles()" 
+			ng-click="deleteAllProfiles()"
 			ng-hide="data.profiles.length === 0">
 			<div>Delete All Particpants</div>
 			<i class="icon ion-trash-b"></i>
@@ -18,10 +18,10 @@
 
 	</div> <!-- end .card-body -->
 
-	<!-- 	
+	<!--
 	<div class="card-foot">
 	 USER INPUT BTNS GO HERE
-	</div> 
+	</div>
 	-->
 	<!-- card-foot -->
 
