--- a/staRt/www/common-components/practice-directive/practice-directive_template.html
+++ b/staRt/www/common-components/practice-directive/practice-directive_template.html
@@ -20,10 +20,8 @@
   </div>
 
    <div class="quest-lpcDir-layout">
-     <div class="waveBox-layout">
+     <!-- <div class="waveBox-layout"> -->
        <lpc-directive
-         beachpost="true"
-         transparent="true"
          probe="probe"
          slider="true"
          rate="isPracticing"
@@ -31,9 +29,10 @@
          sand="true"
          tutorial="false"
          type="type"
-         wave-hidden="forceWaveHidden || isFeedbacking" hide-btn="true">
+         wave-hidden="forceWaveHidden || isFeedbacking"
+         hide-btn="true">
        </lpc-directive>
-     </div>
+     <!-- </div> -->
    </div> <!-- end quest-lpcDir-layout -->
 
    <div class="coin-row-layout ">
