--- a/staRt/www/states/root/free-play/free-play_template.html
+++ b/staRt/www/states/root/free-play/free-play_template.html
@@ -22,14 +22,16 @@
 				This is the place to practice your /r/ sounds on your own. There are no prompts or words to match here. It's just you and the wave.
 			</div>
 
-			<div class="free-lpcBox">
-				<lpc-directive
-					slider="true"
-					reset="true"
-					sand="true"
-					tutorial="false"
-					active="lpcActive">
-				</lpc-directive>
+			<div class="free-lpcFrame">
+				<div class="free-lpcBox">
+					<lpc-directive
+						slider="true"
+						reset="true"
+						sand="true"
+						tutorial="false"
+						active="lpcActive">
+					</lpc-directive>
+				</div>
 			</div>
 
 
