--- a/staRt/www/states/root/profiles/card-templates/settings/card-settings.html
+++ b/staRt/www/states/root/profiles/card-templates/settings/card-settings.html
@@ -5,12 +5,12 @@
 			In general, the filter order should be between 35 and 45.
 		</p>
 
+		<!-- transparent="transparent" -->
 		<div class="pro_lpcBox">
-			<!-- <lpc-directive
+			<lpc-directive
 				sand="false"
-				slider="false"
-				transparent="transparent">
-			</lpc-directive> -->
+				slider="false">
+			</lpc-directive>
 		</div>
 
 		<div class="pro_range-container">
