Fixes sizing issues with wave in different layouts. I'll put a note about this in gh.

--- a/staRt/www/common-components/lpc-directive/lpc-directive_template.html
+++ b/staRt/www/common-components/lpc-directive/lpc-directive_template.html
@@ -1,4 +1,5 @@
 <div class="lpc-contentBox">
+
   <div class="button-side-container rateBtn-container" ng-if="rate">
     <div ng-click="data.rating = 3" class="rateBtn rate-gold">
       <span class="rateBtn-textbox">Great</span>
@@ -67,5 +68,7 @@
       ng-hide="true || lpcHidden || rate">
       Hide Wave
     </button>
-  </div>
-</div>
+    
+  </div> <!-- end .button-side-container .ctlBtn-container -->
+
+</div> <!-- end .lpc-contentBox -->
