integrates  Adjust-LPC logic into Profiles Controller

--- a/staRt/www/states/root/profiles/card-templates/settings/card-settings.html
+++ b/staRt/www/states/root/profiles/card-templates/settings/card-settings.html
@@ -23,13 +23,11 @@
 
 			<div class="pro_range-container">
 				<!-- <div class="range-label">min. 25</div> -->
-
 				<input class="pro_range-input" type="range" min="25" max="45" ng-model="data.lpcOrder" ng-change="updatePluginLPCOrder()" />
-
 				<!-- <div class="range-label">max. 45</div> -->
 			</div> <!-- end .pro_range-container -->
 
-		</div>
+		</div> <!-- end .pro_range-row -->
 
 	</div> <!-- end .card-body -->
 
