--- a/staRt/www/states/root/profiles/profiles_template.html
+++ b/staRt/www/states/root/profiles/profiles_template.html
@@ -73,10 +73,11 @@
 							<h1 >{{displayName}}</h1>
 						</div>
 
+						<!--   iconBtn -->
 						<div class="card-closeBox">
 							<button class="button"
-							ng-click="closeSlpView()">
-								x
+								ng-click="closeSlpView()">
+								<i class="r-close-icon ion-ios-close-outline"></i>
 							</button>
 						</div>
 
@@ -106,11 +107,7 @@
 							<h1 >{{data.currentProfile.name}}</h1>
 						</div>
 
-						<div class="card-closeBox">
-							<!-- <button class="button" ng-click="">
-								x
-							</button> -->
-						</div>
+						<div class="card-closeBox"></div>
 
 					</div> <!-- .card-headBox-->
 
